--- a/assets/css/src/_elements.css
+++ b/assets/css/src/_elements.css
@@ -22,7 +22,7 @@ html {
 
 /* stylelint-disable */
 body {
-	background: #fff;
+	background: var(--color-vibes-white);
 	/* Fallback for when there is no custom background color defined. */
 }
 /* stylelint-enable */
