--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -203,7 +203,25 @@ select {
 
 .site-header {
 	padding-bottom: 1em;
-	background-color: var(--color-background-header);
+	background-color: var(--color-vibes-yellow);
+}
+
+.ui-controls {
+	border-bottom: 2px solid var(--color-vibes-black);
+	padding: 0.5em;
+	margin: 0 2em;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.theme-toggle {
+	display: block;
+	font-family: var(--highlight-font-family);
+	font-stretch: condensed;
+	font-size: 80%;
+	border: none;
+	text-transform: uppercase;
+	background: transparent;
 }
 
 .header-image {
@@ -397,7 +415,7 @@ select {
 	width: 100%;
 	padding: 0.5em 1em 0.5em 0;
 	text-decoration: none;
-	color: #000;
+	color: var(--color-text-main);
 }
 
 .main-navigation a:hover,
